...
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MWD-Od-54n">
                                                        <rect key="frame" x="16" y="36.5" width="382" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="nameInputID"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                                                    </textField>
                                                </subviews>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <constraints>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5hC-4z-YyN">
                                                        <rect key="frame" x="16" y="36.5" width="382" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="descriptionInputID"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                <constraints>
...
                                            </view>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gr-Tm-RIS">
                                        <rect key="frame" x="0.0" y="681" width="414" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Booking" cornerStyle="dynamic"/>
                                        <connections>
                                            <action selector="onClickBooking:" destination="BPh-cm-dPD" eventType="touchUpInside" id="oOO-e3-xqd"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
