...
                                <connections>
                                    <action selector="onBranchTap" destination="BYZ-38-t0r" eventType="touchUpInside" id="fwb-al-FJo"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVR-iA-zmW">
                                <rect key="frame" x="338" y="175" width="60" height="60"/>
                                <accessibility key="accessibilityConfiguration" identifier="MapID"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="Npp-SC-xBY"/>
                                    <constraint firstAttribute="height" constant="60" id="pKf-Ej-sfY"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" cornerStyle="medium">
...
